Updated salary encoding to 16bit integer as 8 bit integer was not sufficient

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Libraries"
    ]
@@ -56,10 +54,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "heading_collapsed": "true"
-   },
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Comments on dataset\n",
     "1. Parse salary \n",
@@ -116,6 +112,7 @@
    "outputs": [],
    "source": [
     "salary = df['Salary Estimate'].apply(lambda x: x.split(\"(\")[0])\n",
+    "\n",
     "# Split will return all the splits created in the string based on delimiter provided. \n",
     "# Since we only need the salary, we pick the first split element from the output array in lambda function\n",
     "\n",
@@ -127,8 +124,59 @@
     "\n",
     "# Put range of salary in dataframe\n",
     "\n",
-    "df['min_salary'] = salary.apply(lambda x: x.split(\"-\")[0]).astype('int8')\n",
-    "df['max_salary'] = salary.apply(lambda x: x.split(\"-\")[1]).astype('int8')"
+    "\n",
+    "df['min_salary'] = salary.apply(lambda x: x.split(\"-\")[0]).astype('int16')\n",
+    "df['max_salary'] = salary.apply(lambda x: x.split(\"-\")[1]).astype('int16')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min_salary</th>\n",
+       "      <th>max_salary</th>\n",
+       "      <th>Company Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [min_salary, max_salary, Company Name]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df.loc[df['min_salary'] < 0, ['min_salary','max_salary','Company Name']])"
    ]
   },
   {
@@ -140,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
